--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
+        <link
+            href="https://fonts.googleapis.com/css?family=Mukta"
+            rel="stylesheet"
+        />
 
         <title>React App</title>
     </head>
