--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,11 @@
             rel="stylesheet"
         />
 
+        <link
+            href="https://fonts.googleapis.com/css?family=Josefin+Sans"
+            rel="stylesheet"
+        />
+
         <title>React App</title>
     </head>
     <body>
